Adjusted some bugs when on mobile device

--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -32,10 +32,7 @@
           padding: 0.5rem;
      }
 
-     #showcase .showcase-content {
-          top: 110px;
-         
-     }
+     
 
      #who {
          display: block; 
